# crypto-matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.py  app.py  build.sh  install_dependencies.sh  main.py  requirements.txt  run.sh  run_mingw64.sh  run_node.sh  ui.py
backend/: BlockchainCore.h  bindings.cpp  testing.cpp
